# rust-style-guide

./: .gitignore  Cargo.toml  README.md  attrs.rs  clippy.toml  rustfmt.toml
src/: lib.rs  macro_attr.rs
